[package]
name = "pallet-erc20"
version = "4.8.4"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/yahortsaryk/substrate/"
description = "FRAME example pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
frame-support = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
frame-system = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
pallet-balances = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
pallet-chainbridge = { version = "4.2.0", default-features = false, path = "../chainbridge" }
pallet-erc721 = { version = "4.2.0", default-features = false, path = "../erc721" }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-arithmetic = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0", default-features = false }
sp-core = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0", default-features = false }
sp-io = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-runtime = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-std = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "sp-io/std",
  "sp-std/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "pallet-chainbridge/std",
  "pallet-erc721/std",
]

[package.metadata.cargo-machete]
ignored = ["scale-info"]
