[package]
name = "cere-runtime-common"
version = "4.8.4"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[features]
default = ["std"]
no_std = []
std = []

[dependencies]
frame-support = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "18c32ed818d8d03671398b23b48ac77db47f7929" }
node-primitives = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "18c32ed818d8d03671398b23b48ac77db47f7929" }
sp-core = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "18c32ed818d8d03671398b23b48ac77db47f7929" }
sp-runtime = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "18c32ed818d8d03671398b23b48ac77db47f7929" }
