[package]
name = "cere-runtime-common"
version = "4.8.4"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[features]
default = ["std"]
no_std = []
std = []

[dependencies]
frame-support = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "708deee039adadd94e527a779903daff7944bdc0" }
node-primitives = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-core = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-runtime = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "708deee039adadd94e527a779903daff7944bdc0" }
