[package]
name = "cere-dev-runtime-constants"
version = "4.8.4"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
node-primitives = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "aa62c739ab004a900d54f738c5e5a25f492fe07c" }
sp-runtime = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "aa62c739ab004a900d54f738c5e5a25f492fe07c" }

[features]
default = ["std"]
std = [
  "node-primitives/std",
]
