[package]
name = "cere-dev-runtime-constants"
version = "4.8.4"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
node-primitives = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-runtime = { git = "https://github.com/yahortsaryk/substrate.git", default-features = false, rev = "708deee039adadd94e527a779903daff7944bdc0" }

[features]
default = ["std"]
std = [
  "node-primitives/std",
]
